# sensor-detector-system

./: .gitignore  .pylintrc  README.md  main.py  pyproject.toml  run_material_detector_machine.sh  test.h204
extra_scripts/: calculate_mean_color.py  camera_control.py  check_classifier.py  check_segmentation.py  check_threshold.py  check_tracker.py  color_interactions.py  sensor_detector.py  sensor_detector_simulation.py  take_photos.py
src/: classifier.py  config_vars.py  coordinator.py  factory.py  tracker.py  transmitter.py  utils.py
src/detector/: base_detector.py  color_detector.py  detector_type.py  utils.py
src/piece/: piece.py
src/sensor/: base_camera.py  base_sensor.py  computer_camera.py  rpi_camera.py  sensor_type.py
test/: delete.py  pruebas.py  pruebas2.py  pruebas3.py  pruebas3_filtro_imagen.py  pruebas_video.py
test/test_detector/: test_color_detector.py
test/test_factory/: test_detector_factory.py  test_sensor_factory.py
test/test_follow/: test_video_follow.py
test/test_piece/: test_piece.py
test/test_sensor/: test_camera_fps.py  test_computer_camera.py  test_rpi_camera.py
test/test_tracker/: test_tracker.py
