[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sensor-detector-system"
version = "0.0.1"
authors = [
    {name = "David Tertre Boyé", email = "davidtertreboye@gmail.com"}
]
description = "Sensor detector system"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["sensor", "detector", "modbus", "system"]

requires-python = ">= 3.13.1"

dependencies = [
  "opencv-python>=4.10.0",
  "matplotlib>=3.10.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
